demo/traefikEE/k8s/monitoring/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
  - host: grafana.docker.localhost
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
